k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - name: http
      port: 4499          # service port
      targetPort: 4499    # container port
      protocol: TCP
